# adtf_file

./: CMakeLists.txt  CMakeLists.txt.install  CONTRIBUTION.md  LICENSE  README.md
doc/: CMakeLists.txt  run_doxygen.cmake.in
doc/input/: adtf_file_documentation.md  mpl.md  page_adtf2_datfile_layout.md  page_delivered_versions.md  page_delivered_versions.md.in  page_examples.md  predef.h.in  used_licenses.md
doc/license/: MPL2.0.txt
src/examples/canwriter/: CMakeLists.txt  can_stream_type_definitions.h  canwriter.cpp  readme.txt
src/examples/canwriter/adtfproject/canwriter/: canwriter.adtfproject
src/examples/canwriter/adtfproject/canwriter/adtfsessions/: ADTF CAN Playback.adtfsession  ADTF CAN Playback.adtfuilayout
src/examples/canwriter/adtfproject/canwriter_adtf2/: canwriter_adtf2.prj
src/examples/canwriter/adtfproject/canwriter_adtf2/config/: info.txt  system.Common.runninglayout  system.config_layout  system.xml
src/examples/csv_processor/: CMakeLists.txt  csv_processor.cpp  csv_processor.h  readme.txt
src/examples/csv_processor/test/: CMakeLists.txt  test_csv_processor.cpp
src/examples/csv_reader/: CMakeLists.txt  csv_reader.cpp  csv_reader.h  readme.txt
src/examples/csv_reader/test/: CMakeLists.txt  test.csv  test_csv_reader.cpp
src/examples/referencedfiles/: CMakeLists.txt  readme.txt  referencedfiles.cpp
src/libraries/adtf_file/: CMakeLists.txt  adtf_file-config.cmake  adtf_file_test_projects.cmake
src/libraries/adtf_file/include/adtf_file/: adtf_file_reader.h  adtf_file_writer.h  default_sample.h  file_extensions.h  legacy_utils4_utils5_types.h  object.h  sample.h  standard_adtf_file_reader.h  standard_factories.h  stream_item.h  stream_type.h
src/libraries/adtf_file/include/adtf_file/adtf2/: adtf2_adtf_core_media_sample_deserializer.h  adtf2_adtf_core_media_sample_serializer.h  adtf2_indexed_data_media_sample_deserializer.h  adtf2_sample_info.h  adtf2_stream_type_deserializers.h  adtf2_stream_type_serializers.h  legacy_types.h
src/libraries/adtf_file/include/adtf_file/adtf3/: adtf3_media_description_deserializer.h  adtf3_media_description_serializer.h  adtf3_sample_copy_deserializer.h  adtf3_sample_copy_serializer.h  adtf3_sample_info.h  adtf3_stream_type_deserializer.h  adtf3_stream_type_serializer.h
src/libraries/adtf_file/src/: adtf_file_reader.cpp  adtf_file_writer.cpp  default_sample.cpp  file_extensions.cpp  object.cpp  object_plugin.cpp  sample.cpp  stream_type.cpp
src/libraries/adtf_file/src/adtf2/: adtf2_adtf_core_media_sample_deserializer.cpp  adtf2_adtf_core_media_sample_serializer.cpp  adtf2_indexed_data_media_sample_deserializer.cpp  adtf2_sample_info.cpp  adtf2_stream_type_deserializers.cpp  adtf2_stream_type_serializers.cpp
src/libraries/adtf_file/src/adtf3/: adtf3_media_description_deserializer.cpp  adtf3_media_description_serializer.cpp  adtf3_sample_copy_deserializer.cpp  adtf3_sample_copy_serializer.cpp  adtf3_sample_flags.h  adtf3_sample_info.cpp  adtf3_stream_type_deserializer.cpp  adtf3_stream_type_serializer.cpp
src/libraries/adtf_file/test/adtf_file_reader/src/: CMakeLists.txt  tester_adtf_file_reader.cpp
src/libraries/adtf_file/test/adtf_file_writer/src/: CMakeLists.txt  tester_adtf_file_writer.cpp
src/libraries/adtf_file/test/plugins/src/: CMakeLists.txt  test_plugin.cpp  test_plugin_old.cpp  test_plugin_old_no_version.cpp  tester_plugins.cpp
src/libraries/adtf_file/test/referencedfiles/src/: CMakeLists.txt  tester_referenced_files.cpp
src/libraries/adtf_file/test/serializations/src/: CMakeLists.txt  tester_adtf3_serializations.cpp
src/libraries/adtfdat_processing/: CMakeLists.txt  adtfdat_processing-config.cmake  adtfdat_processing.sources  adtfdat_processing_test_projects.cmake
src/libraries/adtfdat_processing/include/adtfdat_processing/: adtfdat_file_reader.h  adtfdat_processing.h  configuration.h  ddl_helpers.h  demultiplexer.h  multiplexer.h  processor.h  reader.h
src/libraries/adtfdat_processing/src/: adtfdat_file_reader.cpp  demultiplexer.cpp  multiplexer.cpp
src/libraries/adtfdat_processing/test/: CMakeLists.txt  test_configuration.cpp  test_demultiplexer.cpp  test_multiplexer.cpp  test_processor.cpp  test_processor.h  test_reader.cpp  test_reader.h
src/libraries/ifhd_file/: CMakeLists.txt  ifhd_file-config.cmake  ifhd_test_projects.cmake
src/libraries/ifhd_file/include/ifhd/: ifhd.h  indexedfile_pkg.h  indexedfile_types.h
src/libraries/ifhd_file/include/ifhd/v100/: indexedfile_v100.h  indexedfile_v100_pkg.h  indexedfilereader_v100.h
src/libraries/ifhd_file/include/ifhd/v110/: indexedfile_v110.h  indexedfile_v110_pkg.h  indexedfilereader_v110.h
src/libraries/ifhd_file/include/ifhd/v201_v301/: indexedfile_types_v201_v301.h  indexedfile_v201_v301.h  indexedfile_v201_v301_pkg.h  indexedfilehelper_v201_v301.h  indexedfilereader_v201_v301.h  indexedfilewriter_v201_v301.h  indexreadtable_v201_v301.h  (+1 more)
src/libraries/ifhd_file/src/: indexedfile_v100.cpp  indexedfile_v110.cpp  indexedfile_v201_v301.cpp  indexedfile_v400.cpp  indexedfilehelper_v201_v301.cpp  indexedfilehelper_v400.cpp  indexedfilereader_v100.cpp  indexedfilereader_v110.cpp  indexedfilereader_v201_v301.cpp  indexedfilereader_v400.cpp  indexedfilewriter_v201_v301.cpp  indexedfilewriter_v400.cpp  indexreadtable_v201_v301.cpp  indexreadtable_v400.cpp  indexwritetable_v201_v301.cpp  indexwritetable_v400.cpp
src/libraries/utils5extension/: CMakeLists.txt  utils5extension-config.cmake
src/libraries/utils5extension/include/utils5extension/: file.h  fileringbuffer.h  utils5ext_pkg.h  utils5extension.h
src/libraries/utils5extension/src/: file.cpp
src/tools/adtf_dattool/: CMakeLists.txt  adtf_dattool.cpp
src/tools/adtf_dattool/test/: CMakeLists.txt  dattool_helper.h  example_file_adtf2.dat.description  test_create.cpp  test_export.cpp  test_list_streams.cpp  test_modify_extension.adtfdat  test_modify_extension.cpp
src/tools/adtf_dattool/test/test_processor/: CMakeLists.txt  test_processor.cpp
test/: CMakeLists.txt  test_setup.h
test/function/: CMakeLists.txt
test/standalone/test/: test_setup.h
(+54 files in other folders)
